--- a/06-4/index.html
+++ b/06-4/index.html
@@ -21,58 +21,48 @@
                                 <div class="d-flex flex-column align-items-center text-center">
                                     <img id="img" src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
                                     <div class="mt-3">
-                                        <h4 id="login">John Doe</h4>
+                                        <h4 id="login"></h4>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-8 mh-100">
-                        <div class="card mb-3 h-100">
+                    <div class="col-md-8">
+                        <div class="card mb-3">
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-sm-3">
                                         <h6 class="mb-0">Full Name</h6>
                                     </div>
-                                    <div id="fullname" class="col-sm-9 text-secondary">
-                                        Kenneth Valdez
-                                    </div>
+                                    <div id="fullname" class="col-sm-9 text-secondary"></div>
                                 </div>
                                 <hr>
                                 <div class="row">
                                     <div class="col-sm-3">
                                         <h6 class="mb-0">Email</h6>
                                     </div>
-                                    <div id="email" class="col-sm-9 text-secondary">
-                                        fip@jukmuh.al
-                                    </div>
+                                    <div id="email" class="col-sm-9 text-secondary"></div>
                                 </div>
                                 <hr>
                                 <div class="row">
                                     <div class="col-sm-3">
                                         <h6 class="mb-0">Phone</h6>
                                     </div>
-                                    <div id="phone" class="col-sm-9 text-secondary">
-                                        (239) 816-9029
-                                    </div>
+                                    <div id="phone" class="col-sm-9 text-secondary"></div>
                                 </div>
                                 <hr>
                                 <div class="row">
                                     <div class="col-sm-3">
                                         <h6 class="mb-0">Mobile</h6>
                                     </div>
-                                    <div id="mobile" class="col-sm-9 text-secondary">
-                                        (320) 380-4539
-                                    </div>
+                                    <div id="mobile" class="col-sm-9 text-secondary"></div>
                                 </div>
                                 <hr>
                                 <div class="row">
                                     <div class="col-sm-3">
                                         <h6 class="mb-0">Address</h6>
                                     </div>
-                                    <div id="address" class="col-sm-9 text-secondary">
-                                        Bay Area, San Francisco, CA
-                                    </div>
+                                    <div id="address" class="col-sm-9 text-secondary"></div>
                                 </div>
                             </div>
                         </div>
